; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_rng.c_bcm2835_rng_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_rng.c_bcm2835_rng_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm2835_rng_softc = type { i32*, i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @bcm2835_rng_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm2835_rng_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bcm2835_rng_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.bcm2835_rng_softc* @device_get_softc(i32 %4)
  store %struct.bcm2835_rng_softc* %5, %struct.bcm2835_rng_softc** %3, align 8
  %6 = load %struct.bcm2835_rng_softc*, %struct.bcm2835_rng_softc** %3, align 8
  %7 = call i32 @bcm2835_rng_stop(%struct.bcm2835_rng_softc* %6)
  %8 = load %struct.bcm2835_rng_softc*, %struct.bcm2835_rng_softc** %3, align 8
  %9 = getelementptr inbounds %struct.bcm2835_rng_softc, %struct.bcm2835_rng_softc* %8, i32 0, i32 1
  %10 = call i32 @callout_drain(i32* %9)
  %11 = load %struct.bcm2835_rng_softc*, %struct.bcm2835_rng_softc** %3, align 8
  %12 = getelementptr inbounds %struct.bcm2835_rng_softc, %struct.bcm2835_rng_softc* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %1
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* @SYS_RES_MEMORY, align 4
  %18 = load %struct.bcm2835_rng_softc*, %struct.bcm2835_rng_softc** %3, align 8
  %19 = getelementptr inbounds %struct.bcm2835_rng_softc, %struct.bcm2835_rng_softc* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @bus_release_resource(i32 %16, i32 %17, i32 0, i32* %20)
  br label %22

22:                                               ; preds = %15, %1
  ret i32 0
}

declare dso_local %struct.bcm2835_rng_softc* @device_get_softc(i32) #1

declare dso_local i32 @bcm2835_rng_stop(%struct.bcm2835_rng_softc*) #1

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
